# esp_emote_gfx

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  API__REFERENCE_8md.html  CHANGELOG.md  CMakeLists.txt  DEPLOYMENT.md  Doxyfile  Kconfig  Makefile.docs  PR17_CODE_REVIEW.md  PR17_REVIEW_COMMENT.md  PR17_REVIEW_SUMMARY_CN.md  README.md  README_8md.html  README_REVIEW.md  Using-example.html  annotated.html  annotated_dup.js  api-reference.md  classes.html  dir_000001_000000.html  dir_000001_000002.html  dir_000002_000000.html  dir_3d69f64eaf81436fe2b22361382717e5.html  dir_3d69f64eaf81436fe2b22361382717e5.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_f6b82af68af8f5c6b25e5e68b0491eab.html  dir_f6b82af68af8f5c6b25e5e68b0491eab.js  dir_f6b82af68af8f5c6b25e5e68b0491eab_dep.map  dir_f6b82af68af8f5c6b25e5e68b0491eab_dep.md5  examples.html  examples.js  face_spine_runtime_design.md  files.html  functions.html  functions_vars.html  (+129 more)
.github/workflows/: build.yml  docs.yml  upload_component.yml
components/espressif__qrcode/: esp_qrcode_main.c
docs/: LVGL_FONT_SUPPORT.md  Makefile  changelog.rst  conf.py  designer.rst  esp_emote_gfx_code_review.md  esp_emote_gfx_design_guidelines.md  examples.rst  index.rst  lobster_emote_standard.md  overview.rst  preview.sh  quickstart.rst  rendering.rst
docs/_static/: .gitkeep
docs/_templates/: layout.html
docs/designer_app/: designer.css  designer.js  index.html
docs/scripts/: build_docs.sh  generate_api_docs.py  postprocess_docs.sh
example/: partitions.csv
example/main/: CMakeLists.txt  app_main.c  common.c  common.h  idf_component.yml  mmap_generate_test_assets.h  test_image.c
include/: gfx.h
include/common/: gfx_mesh_frac.h
include/core/: gfx_core.h  gfx_disp.h  gfx_log.h  gfx_obj.h  gfx_touch.h  gfx_types.h
include/widget/: gfx_anim.h  gfx_button.h  gfx_dragon_emote.h  gfx_face_emote.h  gfx_font_lvgl.h  gfx_font_parser.h  gfx_img.h  gfx_label.h  gfx_list.h  gfx_lobster_emote.h  gfx_lobster_face_emote.h  gfx_mesh_img.h  gfx_parametric_emote.h  gfx_qrcode.h  gfx_rig.h  gfx_sm_scene.h  gfx_stickman_emote.h  gfx_stickman_rig_host.h
include_priv/core/: gfx_area.h  gfx_core_internal.h  gfx_core_priv.h  gfx_obj_internal.h  gfx_refr.h  gfx_refr_priv.h  gfx_render.h  gfx_render_priv.h  gfx_timer_internal.h
include_priv/decoder/: gfx_aaf_format.h  gfx_eaf_dec.h  gfx_img_dec_priv.h
include_priv/widget/: gfx_anim_internal.h  gfx_anim_priv.h  gfx_comm.h  gfx_comm_priv.h  gfx_font_parser.h  gfx_img_internal.h  gfx_label_internal.h  gfx_label_priv.h
patches/: PATCH_COMPLIANCE.md  README.md  SUMMARY.md  pr17-review-amendments.json  pr17-review-amendments.patch  validate_patch.sh
scripts/: README.md  deploy-docs.sh  deploy-netlify.sh  deploy-vercel.sh  face_keyframe_debug.py  face_keyframes.json  generate_api_docs.py  generate_face_keyframes_c.py  generate_parametric_baseline.py  gif_merge.py  gif_to_aaf.py  gif_to_split_bmp.py  image_converter.py  poweron.aaf  unpack_bin.py  validate_lobster_export.py
scripts/test/: haffman_err.aaf  haffman_err_0000.sbmp  haffman_err_0001.sbmp  haffman_err_0002.sbmp  haffman_err_0003.sbmp  haffman_err_0004.sbmp  haffman_err_0005.sbmp  haffman_err_0006.sbmp  haffman_err_0007.sbmp  haffman_err_0008.sbmp  haffman_err_0009.sbmp  haffman_err_0010.sbmp  haffman_err_0011.sbmp  haffman_err_0012.sbmp  haffman_err_0013.sbmp  haffman_err_0014.sbmp  haffman_err_0015.sbmp  haffman_err_0016.sbmp  haffman_err_0017.sbmp  haffman_err_0018.sbmp  haffman_err_0019.sbmp  haffman_err_0020.sbmp  haffman_err_0021.sbmp  haffman_err_0022.sbmp  haffman_err_0023.sbmp  haffman_err_0024.sbmp  haffman_err_0025.sbmp  haffman_err_0026.sbmp  haffman_err_0027.sbmp  haffman_err_0028.sbmp  haffman_err_0029.sbmp  haffman_err_0030.sbmp  haffman_err_0031.sbmp  haffman_err_0032.sbmp  poweron.aaf
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_2.js  functions_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  (+16 more)
skills/esp_emote_gfx_design_review/: SKILL.md
src/common/: gfx_comm.h  gfx_log.h
src/core/: gfx_area.c  gfx_blend.c  gfx_blend_priv.h  gfx_core.c  gfx_core_priv.h  gfx_disp.c  gfx_disp_priv.h  gfx_log.c  gfx_obj.c  gfx_obj_priv.h  gfx_refr.c  gfx_refr_priv.h  gfx_render.c  gfx_render_priv.h  gfx_sw_draw.c  gfx_timer.c  gfx_timer_priv.h  gfx_touch.c  gfx_touch_priv.h
src/widget/: gfx_anim.c  (+24 more)
test_apps/: face_animator.html  face_expressions_vivid.html  face_stickman.html  mouth_curves_optimized.html  partitions.csv  sdkconfig.defaults
test_apps/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  common.c  common.h  dragon_emote_assets.inc  face_emote_expr_assets.inc  face_emote_scene.inc  face_emote_scene2.inc  face_eye_tex.inc  font16.c  gen_lobster_readback_textures.py  idf_component.yml  lobster_emote_assets.inc  lobster_emote_baseline.json  lobster_emote_export.inc  lobster_face_emote_assets.inc  lobster_test_body_tex.inc  lobster_test_mesh_tex.inc  lottie2inc.py  mmap_generate_assets_8bit.h  mmap_generate_test_assets.h  rig_active.inc  rig_path_scene.inc  stickman_fireman_export.inc  stickman_fireman_scene.inc  test_anim.c  test_anim_emote_gen.c  test_anim_web.c  test_benchmark.c  test_button.c  test_common.c  test_common.h  test_dragon_emote.c  test_eye_layered.c  test_eye_organic.c  test_face_emote.c  test_face_parts.c  test_gfx_rig_stickman_host.c  test_gfx_sm_scene.c  (+20 more)
test_apps/main/assets/: face_parts_eye.c  face_parts_head.c  face_parts_mouth.c  face_parts_mouth_flat.c  face_parts_mouth_o.c  simple_face.c  simple_face2.c
(+125 files in other folders)
